# apps/opik-backend/src/main/java/com/comet/opik/api/FeedbackScoreBatchItem.java
@@ -2,7 +2,7 @@ package com.comet.opik.api;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
-import com.fasterxml.jackson.annotation.JsonView;
+import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.databind.PropertyNamingStrategies;
 import com.fasterxml.jackson.databind.annotation.JsonNaming;
 import io.swagger.v3.oas.annotations.media.Schema;
@@ -11,8 +11,14 @@ import jakarta.validation.constraints.DecimalMin;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Pattern;
-import lombok.Builder;
+import lombok.AllArgsConstructor;
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.ToString;
+import lombok.experimental.Accessors;
+import lombok.experimental.SuperBuilder;
 
+import java.beans.ConstructorProperties;
 import java.math.BigDecimal;
 import java.util.UUID;
 
@@ -20,26 +26,94 @@ import static com.comet.opik.utils.ValidationUtils.MAX_FEEDBACK_SCORE_VALUE;
 import static com.comet.opik.utils.ValidationUtils.MIN_FEEDBACK_SCORE_VALUE;
 import static com.comet.opik.utils.ValidationUtils.NULL_OR_NOT_BLANK;
 
-@Builder(toBuilder = true)
+@SuperBuilder(toBuilder = true)
+@AllArgsConstructor
 @JsonIgnoreProperties(ignoreUnknown = true)
 @JsonNaming(PropertyNamingStrategies.SnakeCaseStrategy.class)
-public record FeedbackScoreBatchItem(
+@Accessors(fluent = true, chain = true)
+@Getter(onMethod_ = {@JsonProperty})
+public abstract sealed class FeedbackScoreBatchItem {
+
+    @Pattern(regexp = NULL_OR_NOT_BLANK, message = "must not be blank") @Schema(description = "If null, the default project is used")
+    private final String projectName;
+
+    @JsonIgnore
+    private final UUID projectId;
+
+    @NotBlank private final String name;
+
+    @NotNull @DecimalMax(MAX_FEEDBACK_SCORE_VALUE) @DecimalMin(MIN_FEEDBACK_SCORE_VALUE) private final BigDecimal value;
+
+    private final String categoryName;
+
+    private final String reason;
+
+    @NotNull private final ScoreSource source;
+
+    public abstract UUID id();
+
+    public abstract String threadId();
+
+    @JsonIgnore
+    public UUID projectId() {
+        return projectId;
+    }
+
+    // Constructor for subclasses to use
+
+    @ToString(callSuper = true)
+    @EqualsAndHashCode(callSuper = true)
+    @SuperBuilder(toBuilder = true)
+    @JsonIgnoreProperties(ignoreUnknown = true)
+    @JsonNaming(PropertyNamingStrategies.SnakeCaseStrategy.class)
+    @Accessors(fluent = true)
+    @Getter(onMethod_ = {@JsonProperty})
+    public static final class FeedbackScoreBatchItemTracing extends FeedbackScoreBatchItem {
+
         // entity (trace or span) id
-        @Schema(requiredMode = Schema.RequiredMode.REQUIRED) @JsonView( {
-                FeedbackScoreBatch.View.Tracing.class}) @NotNull(groups = {
-                        FeedbackScoreBatch.View.Tracing.class}) UUID id,
-        // thread id
-        @Schema(requiredMode = Schema.RequiredMode.REQUIRED) @JsonView({
-                FeedbackScoreBatch.View.Thread.class}) @NotBlank(groups = {
-                        FeedbackScoreBatch.View.Thread.class}) String threadId,
-        @JsonView({FeedbackScoreBatch.View.Tracing.class,
-                FeedbackScoreBatch.View.Thread.class}) @Pattern(regexp = NULL_OR_NOT_BLANK, message = "must not be blank") @Schema(description = "If null, the default project is used") String projectName,
-        @JsonIgnore UUID projectId,
-        @JsonView({FeedbackScoreBatch.View.Tracing.class, FeedbackScoreBatch.View.Thread.class}) @NotBlank String name,
-        @JsonView({FeedbackScoreBatch.View.Tracing.class, FeedbackScoreBatch.View.Thread.class}) String categoryName,
-        @JsonView({FeedbackScoreBatch.View.Tracing.class,
-                FeedbackScoreBatch.View.Thread.class}) @NotNull @DecimalMax(MAX_FEEDBACK_SCORE_VALUE) @DecimalMin(MIN_FEEDBACK_SCORE_VALUE) BigDecimal value,
-        @JsonView({FeedbackScoreBatch.View.Tracing.class, FeedbackScoreBatch.View.Thread.class}) String reason,
-        @JsonView({FeedbackScoreBatch.View.Tracing.class,
-                FeedbackScoreBatch.View.Thread.class}) @NotNull ScoreSource source){
+        @NotNull private UUID id;
+
+        @ConstructorProperties({"projectName", "projectId", "name", "categoryName", "value", "reason", "source", "id"})
+        public FeedbackScoreBatchItemTracing(String projectName, UUID projectId, String name, String categoryName,
+                BigDecimal value, String reason, ScoreSource source, UUID id) {
+            super(projectName, projectId, name, value, categoryName, reason, source);
+            this.id = id;
+        }
+
+        @Override
+        @JsonIgnore
+        public String threadId() {
+            return null;
+        }
+    }
+
+    @ToString(callSuper = true)
+    @EqualsAndHashCode(callSuper = true)
+    @SuperBuilder(toBuilder = true)
+    @JsonIgnoreProperties(ignoreUnknown = true)
+    @JsonNaming(PropertyNamingStrategies.SnakeCaseStrategy.class)
+    @Accessors(fluent = true)
+    @Getter(onMethod_ = {@JsonProperty})
+    public static final class FeedbackScoreBatchItemThread extends FeedbackScoreBatchItem {
+
+        @NotBlank private String threadId;
+
+        @JsonIgnore
+        private UUID id;
+
+        @ConstructorProperties({"projectName", "projectId", "name", "categoryName", "value", "reason", "source",
+                "threadId"})
+        public FeedbackScoreBatchItemThread(String projectName, UUID projectId, String name, String categoryName,
+                BigDecimal value, String reason, ScoreSource source, String threadId) {
+            super(projectName, projectId, name, value, categoryName, reason, source);
+            this.threadId = threadId;
+        }
+
+        @Override
+        @JsonIgnore
+        public UUID id() {
+            return id;
+        }
+    }
+
 }
