# apps/opik-backend/src/main/java/com/comet/opik/api/resources/v1/events/OnlineScoringEngine.java
@@ -1,6 +1,6 @@
 package com.comet.opik.api.resources.v1.events;
 
-import com.comet.opik.api.FeedbackScoreBatchItem;
+import com.comet.opik.api.FeedbackScoreBatchItem.FeedbackScoreBatchItemTracing.FeedbackScoreBatchItemTracingBuilder;
 import com.comet.opik.api.PromptType;
 import com.comet.opik.api.ScoreSource;
 import com.comet.opik.api.Trace;
@@ -43,6 +43,7 @@ import java.util.stream.StreamSupport;
 import static com.comet.opik.api.AutomationRuleEvaluatorLlmAsJudge.LlmAsJudgeCode;
 import static com.comet.opik.api.AutomationRuleEvaluatorLlmAsJudge.LlmAsJudgeMessage;
 import static com.comet.opik.api.AutomationRuleEvaluatorLlmAsJudge.LlmAsJudgeOutputSchema;
+import static com.comet.opik.api.FeedbackScoreBatchItem.FeedbackScoreBatchItemTracing;
 
 @UtilityClass
 @Slf4j
@@ -207,7 +208,7 @@ public class OnlineScoringEngine {
                 .build();
     }
 
-    public static List<FeedbackScoreBatchItem> toFeedbackScores(@NotNull ChatResponse chatResponse) {
+    public static List<FeedbackScoreBatchItemTracing> toFeedbackScores(@NotNull ChatResponse chatResponse) {
         var content = chatResponse.aiMessage().text();
         JsonNode structuredResponse;
         try {
@@ -230,7 +231,7 @@ public class OnlineScoringEngine {
                         log.info("No score found for '{}' score in {}", scoreName, scoreNested);
                         return null;
                     }
-                    var resultBuilder = FeedbackScoreBatchItem.builder()
+                    FeedbackScoreBatchItemTracingBuilder resultBuilder = FeedbackScoreBatchItemTracing.builder()
                             .name(scoreName)
                             .reason(scoreNested.path(REASON_FIELD_NAME).asText())
                             .source(ScoreSource.ONLINE_SCORING);
